@@ -1,5 +1,5 @@
 [Desktop Entry]
-_Name=Buoh Comics Reader
+_Name=Buoh online comics reader
 _Comment=Read your favourite comics
 Exec=buoh
 Icon=buoh64x64.png
