@@ -157,10 +157,10 @@ buoh_view_init (BuohView *buoh_view)
 					     GTK_SHADOW_NONE);
 	buoh_view->priv->message = buoh_view_message_new ();
 	buoh_view_message_set_title (BUOH_VIEW_MESSAGE (buoh_view->priv->message),
-				     _("Buoh Comics Reader"));
+				     _("Buoh online comics reader"));
 	buoh_view_message_set_text (BUOH_VIEW_MESSAGE (buoh_view->priv->message),
-				    _("Welcome to <b>Buoh</b>, the comics browser for GNOME Desktop.\n"
-				      "The list on the left panel contains your favourite comics, "
+				    _("Welcome to <b>Buoh</b>, the online comics reader for GNOME Desktop.\n"
+				      "The list on the left panel contains your favourite comic strips "
 				      "to add or remove comics to the list click on Comic -> Add. "
 				      "Just select a comic from the list, and it will be displayed "
 				      "on the right side. Thanks for using Buoh."));
